--- a/fe/sgbd-app/src/app/components/create-client/create-client.component.html
+++ b/fe/sgbd-app/src/app/components/create-client/create-client.component.html
@@ -4,31 +4,31 @@
   </div>
   <div class="create-container">
     <mat-card class="create-card">
-      <mat-card-title class="create-card-title">Add car</mat-card-title>
+      <mat-card-title class="create-card-title">Add client</mat-card-title>
   
       <mat-card-content>
         <form [formGroup]="createForm" (ngSubmit)="createCar()" class="create-form">
           <mat-form-field class="form-field">
             <mat-label>Enter new brand</mat-label>
-            <input matInput formControlName="brand" [(ngModel)]="car.brand" />
+            <input matInput formControlName="brand" [(ngModel)]="client.brand" />
             <mat-error *ngIf="createForm.controls['brand'].invalid">{{ getBrandErrorMessage() }}</mat-error>
           </mat-form-field>
   
           <mat-form-field class="form-field">
             <mat-label>Enter new model</mat-label>
-            <input matInput formControlName="model" [(ngModel)]="car.model" />
+            <input matInput formControlName="model" [(ngModel)]="client.model" />
             <mat-error *ngIf="createForm.controls['model'].invalid">{{ getModelErrorMessage() }}</mat-error>
           </mat-form-field>
 
           <mat-form-field class="form-field">
             <mat-label>Enter new type</mat-label>
-            <input matInput formControlName="type" [(ngModel)]="car.type" />
+            <input matInput formControlName="type" [(ngModel)]="client.type" />
             <mat-error *ngIf="createForm.controls['type'].invalid">{{ getTypeErrorMessage() }}</mat-error>
           </mat-form-field>
     
           <mat-form-field class="form-field">
             <mat-label>Enter new price</mat-label>
-            <input matInput formControlName="price" [(ngModel)]="car.price" />
+            <input matInput formControlName="price" [(ngModel)]="client.price" />
             <mat-error *ngIf="createForm.controls['price'].invalid">{{ getPriceErrorMessage() }}</mat-error>
           </mat-form-field>
   
