--- a/fe/sgbd-app/src/app/components/edit-car-details/edit-client-details.component.html
+++ b/fe/sgbd-app/src/app/components/edit-car-details/edit-client-details.component.html
@@ -4,31 +4,31 @@
     </div>
     <div class="edit-container">
       <mat-card class="edit-card">
-        <mat-card-title class="edit-card-title">Edit car details</mat-card-title>
+        <mat-card-title class="edit-card-title">Edit client details</mat-card-title>
     
         <mat-card-content>
           <form [formGroup]="editForm" (ngSubmit)="updateCar()" class="edit-form">
             <mat-form-field class="form-field">
               <mat-label>Enter new brand</mat-label>
-              <input matInput formControlName="brand" [(ngModel)]="car.brand" />
+              <input matInput formControlName="brand" [(ngModel)]="client.brand" />
               <mat-error *ngIf="editForm.controls['brand'].invalid">{{ getBrandErrorMessage() }}</mat-error>
             </mat-form-field>
     
             <mat-form-field class="form-field">
               <mat-label>Enter new model</mat-label>
-              <input matInput formControlName="model" [(ngModel)]="car.model" />
+              <input matInput formControlName="model" [(ngModel)]="client.model" />
               <mat-error *ngIf="editForm.controls['model'].invalid">{{ getModelErrorMessage() }}</mat-error>
             </mat-form-field>
 
             <mat-form-field class="form-field">
               <mat-label>Enter new type</mat-label>
-              <input matInput formControlName="type" [(ngModel)]="car.type" />
+              <input matInput formControlName="type" [(ngModel)]="client.type" />
               <mat-error *ngIf="editForm.controls['type'].invalid">{{ getTypeErrorMessage() }}</mat-error>
             </mat-form-field>
       
             <mat-form-field class="form-field">
               <mat-label>Enter new price</mat-label>
-              <input matInput formControlName="price" [(ngModel)]="car.price" />
+              <input matInput formControlName="price" [(ngModel)]="client.price" />
               <mat-error *ngIf="editForm.controls['price'].invalid">{{ getPriceErrorMessage() }}</mat-error>
             </mat-form-field>
     
