--- a/fe/sgbd-app/src/app/components/view-cars/view-tables.component.html
+++ b/fe/sgbd-app/src/app/components/view-cars/view-tables.component.html
@@ -8,12 +8,12 @@
     <div class="view-trips-container">  
         <mat-card>
             <mat-card-header>
-                <mat-card-title class="view-trips-title-card">Cars</mat-card-title>
+                <mat-card-title class="view-trips-title-card">Tables</mat-card-title>
             </mat-card-header>
             <mat-card-content class="view-trips">
                 <div class="card-view-container">
                     <div *ngFor="let car of cars">
-                        <car-card [car]="car" (onDelete)="onCardDelete($event)"></car-card>
+                        <client-card [car]="car" (onDelete)="onCardDelete($event)"></client-card>
                     </div>
                 </div>
             </mat-card-content>
