--- a/fe/sgbd-app/src/app/components/view-cars/view-tables.component.html
+++ b/fe/sgbd-app/src/app/components/view-cars/view-tables.component.html
@@ -1,4 +1,4 @@
-<div class="buttonRow">
+<!-- <div class="buttonRow">
     <button mat-raised-button color="primary" (click)="getAllCars()">Refresh</button>
     <button mat-raised-button color="primary" (click)="navigateToCreateCar()">Add Car</button>
     <button mat-raised-button color="primary" (click)="logout()">Logout</button>
@@ -19,4 +19,4 @@
             </mat-card-content>
         </mat-card>
     </div>
-</div>
+</div> -->
