Provider table front-end implementation of CRUD

--- a/fe/sgbd-app/src/app/components/home-page/home-page.component.html
+++ b/fe/sgbd-app/src/app/components/home-page/home-page.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <button mat-raised-button color="primary" (click)="navigateToViewCliet()">View clients</button>
   <button mat-raised-button color="primary" (click)="navigateToViewOrder()">View orders</button>
-  <button mat-raised-button color="primary" (click)="navigateToViewCliet()">View items</button>
-  <button mat-raised-button color="primary" (click)="navigateToViewCliet()">View storage locations</button>
-  <button mat-raised-button color="primary" (click)="navigateToViewCliet()">View providers</button>
+  <button mat-raised-button color="primary" (click)="navigateToViewItem()">View items</button>
+  <button mat-raised-button color="primary" (click)="navigateToViewStorageLocation()">View storage locations</button>
+  <button mat-raised-button color="primary" (click)="navigateToViewProvider()">View providers</button>
 </div>
 
 <router-outlet></router-outlet>
