--- a/fe/sgbd-app/src/app/app.component.scss
+++ b/fe/sgbd-app/src/app/app.component.scss
@@ -28,3 +28,28 @@
         }
     }
 }
+.container{
+    border: 1px solid black;
+    padding: 3px;
+    margin-bottom: 3px;
+}
+.container {
+    display: flex;
+    flex-direction: column;
+  }
+  
+.card {
+    display: flex;
+    justify-content: space-between;
+    padding: 8px;
+}
+  
+.column-titles {
+    font-weight: bold;
+}
+
+.topBar{
+    display: flex;
+    justify-content: space-around;
+}
+  
