--- a/fe/sgbd-app/src/app/components/provider/provider-list/provider-list.component.scss
+++ b/fe/sgbd-app/src/app/components/provider/provider-list/provider-list.component.scss
@@ -1,20 +1,1 @@
-.container{
-    border: 1px solid black;
-    padding: 3px;
-    margin-bottom: 3px;
-}
-.container {
-    display: flex;
-    flex-direction: column;
-  }
-  
-.card {
-    display: flex;
-    justify-content: space-between;
-    padding: 8px;
-}
-  
-.column-titles {
-    font-weight: bold;
-}
-  
+@import '../../../app.component.scss';
