--- a/fe/sgbd-app/src/app/components/client/client-list/client-list.component.html
+++ b/fe/sgbd-app/src/app/components/client/client-list/client-list.component.html
@@ -1,5 +1,9 @@
-<button mat-raised-button color="primary" (click)="navigateHome()">Home</button>
-<div *ngFor="let client of clients">
+<div class="topBar">
+    <button mat-raised-button color="primary" (click)="navigateHome()">Home</button>
+    <button mat-raised-button color="primary" (click)="toggleEditMode()">Toggle Edit Mode</button>
+  </div>
+
+  <div *ngFor="let client of clients">
     <div class="container">
         <div *ngFor="let property of getClientProperties(client)">
             {{ property.label }}: {{ property.value }}
