Managing the state through getAll call after each C / U / D operation

--- a/fe/sgbd-app/src/app/components/home-page/home-page.component.html
+++ b/fe/sgbd-app/src/app/components/home-page/home-page.component.html
@@ -1,9 +1,9 @@
 <div class="container">
-  <button mat-raised-button color="primary" (click)="navigateToViewCliet()">View clients</button>
-  <button mat-raised-button color="primary" (click)="navigateToViewOrder()">View orders</button>
-  <button mat-raised-button color="primary" (click)="navigateToViewItem()">View items</button>
-  <button mat-raised-button color="primary" (click)="navigateToViewStorageLocation()">View storage locations</button>
-  <button mat-raised-button color="primary" (click)="navigateToViewProvider()">View providers</button>
+  <button mat-raised-button color="primary" (click)="navigateToViewCliet()">Clients Table</button>
+  <button mat-raised-button color="primary" (click)="navigateToViewOrder()">Orders Table</button>
+  <button mat-raised-button color="primary" (click)="navigateToViewItem()">Items Table</button>
+  <button mat-raised-button color="primary" (click)="navigateToViewStorageLocation()">Storage Locations Table</button>
+  <button mat-raised-button color="primary" (click)="navigateToViewProvider()">Providers Table</button>
 </div>
 
 <router-outlet></router-outlet>
