--- a/fe/sgbd-app/src/app/components/home-page/home-page.component.scss
+++ b/fe/sgbd-app/src/app/components/home-page/home-page.component.scss
@@ -1,4 +1,11 @@
 .container{
     display: flex;
     justify-content: space-evenly;
+    
+    padding: 5px;
+    margin: 20px;
+}
+
+.divContainer{
+    border: 5px solid black;
 }
